# help-to-learn

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml  supervisord.conf
.github/workflows/: docker-publish.yml
alembic/: env.py
alembic/versions/: 2c6338faef8c_add_telegram_bot_token.py  81d962b1773d_add_anki_connect_url_to_user.py
backend/: config.py  database.py  dependencies.py  init_db.py  main.py  worker.py
backend/models/: job.py  material.py  push_record.py  segment.py  user.py
backend/routers/: auth.py  jobs.py  materials.py  push.py  segments.py  users.py
backend/schemas/: auth.py  job.py  material.py  push_record.py  segment.py  user.py
backend/services/: anki_service.py  article_fetcher.py  auth_service.py  downloader.py  processor.py  subtitle_parser.py  telegram_service.py  transcriber.py  tts_service.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue  main.js
frontend/src/api/: index.js
frontend/src/router/: index.js
frontend/src/stores/: app.js  auth.js
frontend/src/views/: Login.vue  MaterialDetail.vue  Materials.vue  Register.vue  Settings.vue  ShareView.vue
nginx/: nginx.conf
tests/: test_subtitle_parser.py
